--- a/public_html/css/mansStils.css
+++ b/public_html/css/mansStils.css
@@ -1,19 +1,24 @@
-            center {
-                text-align: center;
-            }
-            body {
-                font-family: "Lato", sans-serif
-            }
-            .mySlides {
-                display: none
-            }
-            .main-content {
-                margin-top: 30px;
-                padding: 20px;
-            }
-            .section {
-                padding-top: 30px;
-            }
-            .w3-black{
-                display: flex;
-            }
+center {
+    text-align: center;
+}
+body {
+    font-family: "Lato", sans-serif;
+    background-image: linear-gradient(rgba(255, 255, 255, 0.6), rgba(255, 255, 255, 0.6)), url('../images/background_portfolio.png');
+    background-attachment: fixed;
+    background-size: 100% 100%;
+}
+
+.mySlides {
+    display: none
+}
+.main-content {
+    margin-top: 30px;
+    padding: 20px;
+    margin-left: 40px;
+}
+.section {
+    padding-top: 30px;
+}
+.w3-black{
+    display: flex;
+}
